syntax = "proto3";

import "auth/user_token.proto";

package review;

service ReviewService {
    rpc CreateReview(CreateReviewRequest) returns (ReviewResponse);
    rpc FindAllReviews(FindAllReviewsRequest) returns (FindAllReviewsResponse);
    rpc UpdateReview(UpdateReviewRequest) returns (ReviewResponse);
    rpc DeleteReview(DeleteReviewRequest) returns (DeleteReviewResponse);
}

message Review {
    string id = 1;
    string type = 2;
    string service_id = 3;
    string user = 4;
    double rating = 5;
    string review = 6;
    string created_at = 7;
    string updated_at = 8;
}

message CreateReviewRequest {
    userToken.User user = 1;
    string service_id = 2;
    double rating = 3;
    string review = 4;
}

message FindAllReviewsRequest { 
    string service_id = 1;
    int32 page_size = 2;
    int32 page = 3; 
    string domain = 4;
}

message UpdateReviewRequest {
    userToken.User user = 1;
    string id = 2;
    optional double rating = 3;
    optional string review = 4;
}

message DeleteReviewRequest {
    userToken.User user = 1;
    string id = 2;
}

message DeleteReviewResponse {
    string result = 1;
}

message ReviewResponse {
    Review review = 1;
}

message FindAllReviewsResponse {
    repeated Review reviews = 1;
    int32 total_pages = 2;
    int32 page = 3;
    int32 page_size = 4;
}